change the <script/> tag to make Firefox 26 allow js "for each" loops
Presumably this worked in the past with just <script src="..."/>.  Maybe when E4X was removed "for each" loops became a js1.7 opt-in thing.

--- a/src/mines.xhtml
+++ b/src/mines.xhtml
@@ -6,7 +6,7 @@
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="mines.css"/>
   <title>Mines</title>
-  <script src="mines.js"></script>
+  <script type="application/javascript;version=1.7" src="mines.js"></script>
 </head>
 
 <body>
