--- a/src/mines.xhtml
+++ b/src/mines.xhtml
@@ -29,7 +29,7 @@
 </div>
 
 <div id="wrapper">
-  <svg id="gameview" xmlns="http://www.w3.org/2000/svg" version="1.0" viewBox="0 0 1000 1000" preserveAspectRatio="xMidYMid meet">
+  <svg id="gameview" xmlns="http://www.w3.org/2000/svg" version="1.0" viewBox="0 0 1000 1000" preserveAspectRatio="xMidYMid meet" width="100%" height="100%">
     <defs id="defs">
       <path id="hex" class="shape" d="M 112,0 L 37,0 L 0,65 L 37,130 L 112,130 L 149,65 z"/>
       <path id="sqr" class="shape" d="M 0,0 L 50,0 50,50 0,50 z"/>
