rewrite the timer/minecounter ui using React

--- a/src/mines.html
+++ b/src/mines.html
@@ -21,16 +21,7 @@
   <input type="button" id="pause-button" value="Pause" onclick="togglePause();" disabled="disabled"/>
   <input type="button" id="settings-button" value="Settings" onclick="showSettings();"/>
 
-  <table><tbody>
-    <tr><th>Time</th><td id="timer"/></tr>
-    <tr><th class="n1">1⚑</th><td><span id="mine-counter-1"></span></td></tr>
-    <tr><th class="n2">2⚑</th><td><span id="mine-counter-2"></span></td></tr>
-    <tr><th class="n3">3⚑</th><td><span id="mine-counter-3"></span></td></tr>
-    <tr><th class="n4">4⚑</th><td><span id="mine-counter-4"></span></td></tr>
-    <tr><th class="n5">5⚑</th><td><span id="mine-counter-5"></span></td></tr>
-    <tr><th class="n6">6⚑</th><td><span id="mine-counter-6"></span></td></tr>
-    <tr><th class="n7">7⚑</th><td><span id="mine-counter-7"></span></td></tr>
-  </tbody></table>
+  <div id="counter-wrapper"></div>
 </div>
 
 <div id="wrapper"></div>
