compile with TypeScript's tsc rather than babel
It produces lots of type errors, mostly due to not having types for
React, but appears to work fine.

--- a/src/mines.html
+++ b/src/mines.html
@@ -9,9 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser-polyfill.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.min.js"></script>
-  <script src="gridutil.js"></script>
-  <script src="gridui.js"></script>
-  <script src="mines.js"></script>
+  <script src="tsc_output.js"></script>
 </head>
 
 <body>
